...
          })}
        </View>
      </ScrollView>

      <View style={styles.footer}>
        <Button
          title="PRÓXIMO"
          onPress={onNext}
          disabled={!selected}
          accessibilityLabel="Ir para próximo passo"
        />
      </View>
    </SafeAreaView>
...
